--- a/src/templates/components/_product.jade
+++ b/src/templates/components/_product.jade
@@ -67,7 +67,7 @@
 								+icon('icon-ruble','product__val-icon')
 			+e.ARTICLE.suggest._border
 				+e.suggest-text
-					+e.suggest-title ЕСТЬ ИДЕИ?
+					+e.suggest-title.title-md ЕСТЬ ИДЕИ?
 					+e.P.suggest-descr У вас много идей для оригинального подарка? Мы готовы воплощать их в жизнь! Разработаем дизайн и стили стежков, специально под ваш сувенир. Вопреки расхожему мнению, что вышивка это  дорогостоящее удовольствие - поспешим отметить это выражение с оговоркой: - «Только не на нашем предприятии»!
 					+e.suggest-links
 						+e.suggest-col
@@ -151,7 +151,7 @@
 			+e.ARTICLE.suggest.decor
 				.decor__line.decor__line_suggest
 				+e.suggest-text
-					+e.suggest-title КАТАЛОГ ДИЗАЙНА
+					+e.suggest-title.title-md КАТАЛОГ ДИЗАЙНА
 					+e.P.suggest-descr._topm Каталог готовых дизайнов порадует вас и даст возможность поразмыслить над собственным вдохновением...
 					+e.suggest-links._col
 						+e.A(href="#!").suggest-link Печать на майках
@@ -225,7 +225,7 @@
 								+icon('icon-ruble','product__val-icon')
 			+e.ARTICLE.suggest._border
 				+e.suggest-text
-					+e.suggest-title КРУЖКА ПОЛЕЗНЫЙ И ПРИЯТНЫЙ ПОДАРОК!
+					+e.suggest-title.title-md КРУЖКА ПОЛЕЗНЫЙ И ПРИЯТНЫЙ ПОДАРОК!
 					+e.P.suggest-descr Вы можете оригинально отличиться и приобрести двойную выгоду - посуду для использования и хорошее настроение при чаепитии. Печать на кружках популярная услуга, ввиду практичности использования сувенира. У нас вы встретите эксклюзивные дизайн-макеты для печати на кружках, рассмотрите все возможные заготовки для печати.
 					+e.suggest-links._col
 						+e.A(href="#!").suggest-link Новый каталог дизайнов на кружки
@@ -291,7 +291,7 @@
 			+e.ARTICLE.suggest.decor
 				.decor__line.decor__line_suggest
 				+e.suggest-text
-					+e.suggest-title НОВИНКИ МИРА ФОТОКНИГ!
+					+e.suggest-title.title-md НОВИНКИ МИРА ФОТОКНИГ!
 					+e.P.suggest-descr У нас вы встретите лучшие новинки технологий изготовления фотокниг! Это голографические обложки и готовые обложки от производителей для изготовления свадебных фотоальбомов. Похожие предложения, по оригинальности пока нельзя встретить на других ресурсах конкурирующих организаций.
 				+e.A(href="#!").suggest-btn.btn._dark Фотокниги
 	+e.container.container
@@ -358,7 +358,7 @@
 								+icon('icon-ruble','product__val-icon')
 			+e.ARTICLE.suggest._border._more-text
 				+e.suggest-text
-					+e.suggest-title РУЧНЫЕ СУВЕНИРЫ
+					+e.suggest-title.title-md РУЧНЫЕ СУВЕНИРЫ
 					+e.P.suggest-descr Изготовление сувенирных значков, есть акриловые фотомагниты, открывашки, ручки, брелки, медальоны «ГосНомер», бейджи для сотрудников, карманные зеркальца и даже заколки с логотипами для промоутеров.
 					+e.P.suggest-descr Все что нужно, с доставкой по России! Профессионально изготовим дизайн закатных значков с вашими логотипами и фотографиями для печати.
 					+e.suggest-links
@@ -428,7 +428,7 @@
 			+e.ARTICLE.suggest.decor
 				.decor__line.decor__line_suggest
 				+e.suggest-text
-					+e.suggest-title ИЗГОТОВЛЕНИЕ КАРТИН
+					+e.suggest-title.title-md ИЗГОТОВЛЕНИЕ КАРТИН
 					+e.P.suggest-descr Печать и изготовление картин. В нашем каталоге вы можете выбрать  понравившееся вам картины, мы с удовольствиемизготовим их для Вас.
 					+e.P.suggest-descr Картины можно изготовить любого размера (в дополнение к предложенным заготовкам).
 					+e.suggest-links
@@ -500,7 +500,7 @@
 			+e.ARTICLE.suggest.decor
 				.decor__line.decor__line_suggest
 				+e.suggest-text
-					+e.suggest-title ВОЗДУШНЫЕ ШАРЫ С ДОСТАВКОЙ
+					+e.suggest-title.title-md ВОЗДУШНЫЕ ШАРЫ С ДОСТАВКОЙ
 					+e.P.suggest-descr Наши цены - одни из самых привлекательных, а оптовый ассортимент превосходит розничных городских операторов. Производим собственные поставки из других регионов, оригинальные галографические ленты, шары с печатью, цифры и другое, смотрите каталог!
 					+e.suggest-links._more-text
 						+e.suggest-col
