--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -29,10 +29,15 @@ h1, h2, h3, h4, h5, h6
 .title-md
 	font-family: Arial, sans-serif
 	font-size: 20px
-	line-height: 1.3
-	
+	+md
+		font-size: 17px
+	+sm
+		font-size: 15px
+	+xs
+		font-size: 16px
+		
 .title-lg
-	color: #274F7F
+	color: #00306B
 	+f('psr',27)
 	text-transform: uppercase
 	
