--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -6,5 +6,7 @@
 @import lib/stepper
 @import common
 @import pages/contacts
+@import pages/delivery
+@import pages/payment
 @import components/blocks
 @import components/all
