--- a/src/sass/pages/_contacts.sass
+++ b/src/sass/pages/_contacts.sass
@@ -61,10 +61,8 @@
 			text-align: center
 		&-text
 			text-indent: 35px
-			
-	&__wait-text
-		margin: 95px 0 60px
-		text-align: center
+		
 	&_default
 		padding-left: 30px
+		padding-bottom:  60px
 		
