--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -5,8 +5,10 @@
 @import lib/slick
 @import lib/stepper
 @import common
+@import components/all
 @import pages/contacts
 @import pages/delivery
 @import pages/payment
-@import components/blocks
-@import components/all
+@import pages/basket
+@import pages/order
+@import pages/news
