--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -605,12 +605,12 @@
 					top: -6px
 					transform: scale(.7)
 			&:nth-child(1)::before
-				+sr('user-log')
+				+sr('user_black')
 				left: -4px
 				+md
 					left: -11px
 			&:nth-child(2)::before
-				+sr('pass-log')
+				+sr('dots_black')
 				left: -3px
 				+md
 					left: -10px
