--- a/src/sass/components/_request.sass
+++ b/src/sass/components/_request.sass
@@ -121,9 +121,11 @@
 			width: 65px
 			height: 29px
 			background-color: #f7f7f7
-			bottom: 9px
-			right: 7px
+			bottom: 4px
+			right: 18px
 			line-height: 43px
+			&.is-active .request__message-icon
+				transform: scaleY(-1)
 		&-extend:hover &-icon
 				fill: #56708A
 		&-extend:active &-icon
