--- a/src/templates/delivery-page.jade
+++ b/src/templates/delivery-page.jade
@@ -12,239 +12,14 @@ block content
 						+icon('icon-house', 'breadcrumbs__icon')
 						= ' '
 						+e.SPAN Главная
-					+e.A.link(href='#!')
+					+e.A.link.is-active(href='#!')
 						+e.SPAN Доставка
 
 				+e.bar-title
 					+e.SPAN Быстро, удобно, надёжно!
 
 			+e.in
-				+b.ASIDE.rubric._side.page__side
-					+e.UL.list
-						+e.list-item._color.is-active
-							+e.A(href="#!").list-link._color
-								+e.SPAN СУВЕНИРЫ ПО ТЕМАТИКЕ
-								+icon('icon-arr-def','rubric__list-icon')
-							+e.UL.sub-list
-								+e.sub-item
-									+e.A(href="#!").sub-link Подарки мужчине
-								+e.sub-item
-									+e.A(href="#!").sub-link Подарки женщине
-								+e.mini.js-rubric-list
-									+e.mini-title Корпоративные
-										+icon('icon-arr-def','rubric__mini-icon')
-									+e.UL.mini-list
-										+e.mini-item
-											+e.A.mini-link(href='#!') Корпоративные 1
-										+e.mini-item
-											+e.A.mini-link(href='#!') Корпоративные 2
-										+e.mini-item
-											+e.A.mini-link(href='#!') Корпоративные 3
-								+e.sub-item
-									+e.A(href="#!").sub-link Популярные
-								+e.sub-item
-									+e.A(href="#!").sub-link В День Рождения
-								+e.sub-item
-									+e.A(href="#!").sub-link Оригинальные идеи
-								+e.sub-item
-									+e.A(href="#!").sub-link Для детей
-								+e.sub-item
-									+e.A(href="#!").sub-link Учителю
-								+e.sub-item
-									+e.A(href="#!").sub-link Маме
-								+e.sub-item
-									+e.A(href="#!").sub-link Папе
-								+e.sub-item
-									+e.A(href="#!").sub-link Для бабушки
-								+e.sub-item._best
-									+e.A(href="#!").sub-link._decor Лучшие подарки (наш выбор)
-								+e.mini.js-rubric-list.is-active
-									+e.mini-title Надписи имён
-										+icon('icon-arr-def','rubric__mini-icon')
-									+e.UL.mini-list
-										+e.mini-item
-											+e.A.mini-link(href='#!') Вышивки имён
-												+icon('icon-arr-def','rubric__mini-icon-sm')
-										+e.mini-item
-											+e.A.mini-link(href='#!') Имена на кружках
-										+e.mini-item
-											+e.A.mini-link(href='#!') Имена на майках
-								+e.mini.js-rubric-list
-									+e.mini-title Сезонные 23/8/9/31
-										+icon('icon-arr-def','rubric__mini-icon')
-									+e.UL.mini-list
-										+e.mini-item
-											+e.A.mini-link(href='#!') 8 марта
-										+e.mini-item
-											+e.A.mini-link(href='#!') 23 февраля
-										+e.mini-item
-											+e.A.mini-link(href='#!') 9 мая
-										+e.mini-item
-											+e.A.mini-link(href='#!') 1 сентября
-										+e.mini-item
-											+e.A.mini-link(href='#!') День Валентина
-										+e.mini-item
-											+e.A.mini-link(href='#!') Новый Год
-
-					+e.UL.list
-						+e.list-item
-							+e.A(href="#!").list-link
-								+e.SPAN МАШИННАЯ ВЫШИВКА
-								+icon('icon-arr-def','rubric__list-icon')
-							+e.UL.sub-list
-								+e.mini.js-rubric-list
-									+e.mini-title Продукция и услуги
-										+icon('icon-arr-def','rubric__mini-icon')
-									+e.UL.mini-list
-										+e.mini-item
-											+e.A.mini-link(href='#!') Полотенца с вышивкой
-										+e.mini-item
-											+e.A.mini-link(href='#!') Халаты с вышивкой
-										+e.mini-item
-											+e.A.mini-link(href='#!') Вышивка шевронов
-										+e.mini-item
-											+e.A.mini-link(href='#!') Вышивание на крое
-								+e.sub-item._best
-									+e.A(href="#!").sub-link.link-decor._rubric
-										+e.SPAN Лучшие предложения по вышивке (наш выбор)
-								+e.sub-item
-									+e.A(href="#!").sub-link Новинки дизайнов вышивок
-								+e.sub-item
-									+e.A(href="#!").sub-link Образцы наших работ
-
-					+e.UL.list
-						+e.list-item._color
-							+e.A(href="#!").list-link._more-text._color
-								+e.SPAN ПЕЧАТЬ НА ОДЕЖДЕ
-								+icon('icon-arr-def','rubric__list-icon')
-							+e.UL.sub-list
-								+e.sub-item
-									+e.A(href="#!").sub-link Майки - все дизайны
-								+e.sub-item
-									+e.A(href="#!").sub-link Новинки дизайнов
-								+e.sub-item._best
-									+e.A(href="#!").sub-link Лучшие предложения - одежда (наш выбор)
-								+e.mini.js-rubric-list
-									+e.mini-title Заготовки под нанесение
-										+icon('icon-arr-def','rubric__mini-icon')
-									+e.UL.mini-list
-										+e.mini-item
-											+e.A.mini-link(href='#!') Белые майки
-										+e.mini-item
-											+e.A.mini-link(href='#!') Цветные майки
-										+e.mini-item
-											+e.A.mini-link(href='#!') Майки поло
-										+e.mini-item
-											+e.A.mini-link(href='#!') Майки женские
-										+e.mini-item
-											+e.A.mini-link(href='#!') Детские майки
-										+e.mini-item
-											+e.A.mini-link(href='#!') Кепки
-										+e.mini-item
-											+e.A.mini-link(href='#!') Все заготовки
-								+e.sub-item
-									+e.A(href="#!").sub-link Печать на кепках
-								+e.sub-item
-									+e.A(href="#!").sub-link На «Вашей» одежде
-								+e.sub-item
-									+e.A(href="#!").sub-link Спортивная одежда
-								+e.sub-item
-									+e.A(href="#!").sub-link Логотипы на одежде
-								+e.sub-item._examples
-									+e.A(href="#!").sub-link Образцы наших работ
-					+e.UL.list
-						+e.list-item._color
-							+e.A(href="#!").list-link._color
-								+e.SPAN ФОТОКНИГИ
-								+icon('icon-arr-def','rubric__list-icon')
-							+e.UL.sub-list
-								+e.sub-item
-									+e.A(href="#!").sub-link Печать фотокниг
-								+e.sub-item
-									+e.A(href="#!").sub-link Обложки эксклюзивные
-								+e.sub-item
-									+e.A(href="#!").sub-link Оригинальные форзацы
-								+e.sub-item
-									+e.A(href="#!").sub-link Дизайн на фотокнигу
-					+e.UL.list
-						+e.list-item
-							+e.A(href="#!").list-link
-								+e.SPAN ЗНАЧКИ / БРЕЛКИ
-								+icon('icon-arr-def','rubric__list-icon')
-							+e.UL.sub-list
-								+e.sub-item
-									+e.A(href="#!").sub-link._has-hit
-										+e.SPAN Значки - сувениры
-										+e.SPAN.hit Хит!
-								+e.sub-item
-									+e.A(href="#!").sub-link Новинки дизайна значков
-								+e.mini.js-rubric-list
-									+e.mini-title Возможные заготовки
-										+icon('icon-arr-def','rubric__mini-icon')
-									+e.UL.mini-list
-										+e.mini-item
-											+e.A.mini-link(href='#!') Значки на иголочке
-										+e.mini-item
-											+e.A.mini-link(href='#!') Значки на магнитах
-										+e.mini-item
-											+e.A.mini-link(href='#!') Брелки
-										+e.mini-item
-											+e.A.mini-link(href='#!') Брелки ГосНомер
-										+e.mini-item
-											+e.A.mini-link(href='#!') Ручки
-										+e.mini-item
-											+e.A.mini-link(href='#!') Скрепки с логотипами
-										+e.mini-item
-											+e.A.mini-link(href='#!') Зеркальца закатные
-										+e.mini-item
-											+e.A.mini-link(href='#!') Открывашки
-										+e.mini-item
-											+e.A.mini-link(href='#!') Бейджи
-										+e.mini-item
-											+e.A.mini-link(href='#!') Медальоны
-										+e.mini-item
-											+e.A.mini-link(href='#!') На холодильник
-										+e.mini-item
-											+e.A.mini-link(href='#!') Магниты из винила
-								+e.sub-item._examples
-									+e.A(href="#!").sub-link Образцы наших работ
-								+e.sub-item._examples
-									+e.A(href="#!").sub-link Логотипы на значках
-
-					+e.UL.list
-						+e.list-item
-							+e.A(href="#!").list-link
-								+e.SPAN ПЕЧАТЬ КАРТИН И БАГЕТ
-								+icon('icon-arr-def','rubric__list-icon')
-							+e.UL.sub-list
-								+e.mini.js-rubric-list
-									+e.mini-title Каталог картин
-										+icon('icon-arr-def','rubric__mini-icon')
-									+e.UL.mini-list
-										+e.mini-item
-											+e.A.mini-link(href='#!') Картины для дома (выбор)
-										+e.mini-item
-											+e.A.mini-link(href='#!') Картины для офиса
-										+e.mini-item
-											+e.A.mini-link(href='#!') Постеры
-										+e.mini-item
-											+e.A.mini-link(href='#!') Современные фото
-										+e.mini-item
-											+e.A.mini-link(href='#!') Репродукции картин
-												+e.SPAN.hit Хит!
-										+e.mini-item
-											+e.A.mini-link(href='#!') Все картины художников
-										+e.mini-item
-											+e.A(href="#!").sub-link Наш выбор (рекомендуем)
-								+e.sub-item
-									+e.A(href="#!").sub-link Модульные картины
-								+e.sub-item
-									+e.A(href="#!").sub-link Мозаика из фотографий
-								+e.sub-item
-									+e.A(href="#!").sub-link Портрет по фото на холсте
-								+e.sub-item
-									+e.A(href="#!").sub-link Багетное оформление
-
+				include components/_rubric-side
 				+e.main
 					+b.delivery
 						+e.country
