--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -267,7 +267,7 @@ button
 		span
 			border-bottom-color: #079DE3
 	&:active
-		background: #23568B!important
+		background: #23568B
 		border-bottom-color: #FF0000
 		span
 			border-bottom-color: #254478
