--- a/src/sass/components/_rubric.sass
+++ b/src/sass/components/_rubric.sass
@@ -142,6 +142,8 @@
 			margin-top: 20px
 	&__mini.is-active &__mini-icon
 			fill: #56708A
+	&__mini.is-active &__mini-list
+		display: block
 	&__mini-title
 		position: relative
 		display: block
@@ -164,6 +166,8 @@
 		padding: 0 0 0 25px
 		margin: 4px 0
 		line-height: 1.05
+	&__mini-item.is-active &__mini-icon-sm
+		display: block
 		&_margin
 			margin-top: 20px
 	&__mini-link
@@ -181,6 +185,7 @@
 		font-size: 9px
 		fill: #C2C2C2
 	&__mini-icon-sm
+		display: none
 		position: absolute
 		left: 9px
 		top: 4px
