--- a/src/templates/components/_rubric-side.jade
+++ b/src/templates/components/_rubric-side.jade
@@ -42,7 +42,7 @@
 					+e.mini-title Надписи имён
 						+icon('icon-arr-def','rubric__mini-icon')
 					+e.UL.mini-list
-						+e.mini-item
+						+e.mini-item.is-active
 							+e.A.mini-link(href='#!') Вышивки имён
 								+icon('icon-arr-def','rubric__mini-icon-sm')
 						+e.mini-item
